<resources>
    <string name="app_name">SQLite_Ex</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_product">Add Product</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_price">Enter Price</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_product">Edit Product</string>
</resources>